Manifest/Jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.jellyfin.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
    - match: Host(`jellyfin.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: bouncer
          namespace: traefik
        - name: default-headers
          namespace: traefik
        - name: rate-limit
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
